# Connect-4

./: .gitignore  Cargo.toml  README.md
Online/: README.md  package-lock.json  package.json  server.js
Online/online-game/: game.css  game.html  game.js
Online/public/: index.css  index.html  local-game.html  online-game.html  private-game.html  public-game.html
Online/public/css/: game.css  homepage.css
Online/public/js/: Cargo.toml  homepage.js  local-game.js  online-game.js  private-game.js  public-game.js
Online/public/js/pkg/: package.json
Online/public/js/src/: game.rs  lib.rs
Online/public/local-game/: game.css  game.html  game.js  index.html
Online/public/local-game/pkg/: Connect4.js  Connect4_bg.d.ts  Connect4_bg.js
Online/public/online-game/: chat.js  game.css  game.html  game.js  index.html
Online/public/online-game/pkg/: Connect4.d.ts  Connect4_bg.wasm
Terminal/: Cargo.toml  README.md
Terminal/src/: game.rs  game_master.rs  main.rs  player.rs
src/: game.rs  game_master.rs  main.rs  player.rs
