[package]
name = "Connect4"
version = "0.1.0"
authors = ["Marcus Anderson"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
