[package]
name = "connect4"
version = "0.1.0"
authors = ["Marcus Anderson"]
edition = "2018"
repository = "https://github.com/markuz449/Connect-4"
description = "Connect 4 game code that needs to be compiled into web assembly for online game"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
